# mkv_shrink

./: .gitignore  pyproject.toml
.claude/: settings.local.json
mkv_shrink/: config.py  config.toml  shrink.py  watcher.py
